<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
            android:id="@+id/menu_matches"
            android:enabled="true"
            android:icon="@drawable/ic_calendar"
            android:title="@string/matches"
            app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_teams"
        android:enabled="true"
        android:icon="@drawable/ic_teams"
        android:title="@string/teams"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_favorites"
        android:enabled="true"
        android:icon="@drawable/ic_favorites"
        android:title="@string/favorites"
        app:showAsAction="ifRoom" />
</menu>